antlr/CalcLL1Parser.py
# Generated from CalcLL1.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CalcLL1Parser ( Parser ):

    grammarFileName = "CalcLL1.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", 
                     "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "SIN", "COS", "TAN", "ABS", "PLUS", "MINUS", 
                      "TIMES", "DIVIDE", "MOD", "ASSIGN", "LPAREN", "RPAREN", 
                      "NUMBER", "ID", "NEWLINE", "WS", "COMMENT" ]

    RULE_programa = 0
    RULE_sentencia = 1
    RULE_sentenciaP = 2
    RULE_expr = 3
    RULE_exprP = 4
    RULE_term = 5
    RULE_termP = 6
    RULE_unary = 7
    RULE_factor = 8
    RULE_primary = 9

    ruleNames =  [ "programa", "sentencia", "sentenciaP", "expr", "exprP", 
                   "term", "termP", "unary", "factor", "primary" ]

    EOF = Token.EOF
    SIN=1
    COS=2
    TAN=3
    ABS=4
    PLUS=5
    MINUS=6
    TIMES=7
    DIVIDE=8
    MOD=9
    ASSIGN=10
    LPAREN=11
    RPAREN=12
    NUMBER=13
    ID=14
    NEWLINE=15
    WS=16
    COMMENT=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CalcLL1Parser.EOF, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CalcLL1Parser.SentenciaContext)
            else:
                return self.getTypedRuleContext(CalcLL1Parser.SentenciaContext,i)


        def getRuleIndex(self):
            return CalcLL1Parser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = CalcLL1Parser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 26718) != 0):
                self.state = 20
                self.sentencia()
                self.state = 25
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 26
            self.match(CalcLL1Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CalcLL1Parser.RULE_sentencia

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SentenciaConIdContext(SentenciaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalcLL1Parser.SentenciaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(CalcLL1Parser.ID, 0)
        def sentenciaP(self):
            return self.getTypedRuleContext(CalcLL1Parser.SentenciaPContext,0)

        def NEWLINE(self):
            return self.getToken(CalcLL1Parser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentenciaConId" ):
                listener.enterSentenciaConId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentenciaConId" ):
                listener.exitSentenciaConId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentenciaConId" ):
                return visitor.visitSentenciaConId(self)
            else:
                return visitor.visitChildren(self)


    class ExpresionSolaContext(SentenciaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalcLL1Parser.SentenciaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(CalcLL1Parser.ExprContext,0)

        def NEWLINE(self):
            return self.getToken(CalcLL1Parser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresionSola" ):
                listener.enterExpresionSola(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresionSola" ):
                listener.exitExpresionSola(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpresionSola" ):
                return visitor.visitExpresionSola(self)
            else:
                return visitor.visitChildren(self)



    def sentencia(self):

        localctx = CalcLL1Parser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentencia)
        try:
            self.state = 35
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = CalcLL1Parser.SentenciaConIdContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 28
                self.match(CalcLL1Parser.ID)
                self.state = 29
                self.sentenciaP()
                self.state = 30
                self.match(CalcLL1Parser.NEWLINE)
                pass

            elif la_ == 2:
                localctx = CalcLL1Parser.ExpresionSolaContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 32
                self.expr()
                self.state = 33
                self.match(CalcLL1Parser.NEWLINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaPContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CalcLL1Parser.RULE_sentenciaP

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EsExpresionContext(SentenciaPContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalcLL1Parser.SentenciaPContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def termP(self):
            return self.getTypedRuleContext(CalcLL1Parser.TermPContext,0)

        def exprP(self):
            return self.getTypedRuleContext(CalcLL1Parser.ExprPContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEsExpresion" ):
                listener.enterEsExpresion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEsExpresion" ):
                listener.exitEsExpresion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEsExpresion" ):
                return visitor.visitEsExpresion(self)
            else:
                return visitor.visitChildren(self)


    class EsAsignacionContext(SentenciaPContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalcLL1Parser.SentenciaPContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ASSIGN(self):
            return self.getToken(CalcLL1Parser.ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(CalcLL1Parser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEsAsignacion" ):
                listener.enterEsAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEsAsignacion" ):
                listener.exitEsAsignacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEsAsignacion" ):
                return visitor.visitEsAsignacion(self)
            else:
                return visitor.visitChildren(self)



    def sentenciaP(self):

        localctx = CalcLL1Parser.SentenciaPContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_sentenciaP)
        try:
            self.state = 42
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                localctx = CalcLL1Parser.EsAsignacionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.match(CalcLL1Parser.ASSIGN)
                self.state = 38
                self.expr()
                pass
            elif token in [5, 6, 7, 8, 9, 15]:
                localctx = CalcLL1Parser.EsExpresionContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.termP()
                self.state = 40
                self.exprP()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self):
            return self.getTypedRuleContext(CalcLL1Parser.TermContext,0)


        def exprP(self):
            return self.getTypedRuleContext(CalcLL1Parser.ExprPContext,0)


        def getRuleIndex(self):
            return CalcLL1Parser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = CalcLL1Parser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.term()
            self.state = 45
            self.exprP()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprPContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CalcLL1Parser.RULE_exprP

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SumaPContext(ExprPContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalcLL1Parser.ExprPContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PLUS(self):
            return self.getToken(CalcLL1Parser.PLUS, 0)
        def term(self):
            return self.getTypedRuleContext(CalcLL1Parser.TermContext,0)

        def exprP(self):
            return self.getTypedRuleContext(CalcLL1Parser.ExprPContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSumaP" ):
                listener.enterSumaP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSumaP" ):
                listener.exitSumaP(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSumaP" ):
                return visitor.visitSumaP(self)
            else:
                return visitor.visitChildren(self)


    class ExprPVacioContext(ExprPContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalcLL1Parser.ExprPContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprPVacio" ):
                listener.enterExprPVacio(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprPVacio" ):
                listener.exitExprPVacio(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprPVacio" ):
                return visitor.visitExprPVacio(self)
            else:
                return visitor.visitChildren(self)


    class RestaPContext(ExprPContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalcLL1Parser.ExprPContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MINUS(self):
            return self.getToken(CalcLL1Parser.MINUS, 0)
        def term(self):
            return self.getTypedRuleContext(CalcLL1Parser.TermContext,0)

        def exprP(self):
            return self.getTypedRuleContext(CalcLL1Parser.ExprPContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRestaP" ):
                listener.enterRestaP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRestaP" ):
                listener.exitRestaP(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRestaP" ):
                return visitor.visitRestaP(self)
            else:
                return visitor.visitChildren(self)



    def exprP(self):

        localctx = CalcLL1Parser.ExprPContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_exprP)
        try:
            self.state = 56
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                localctx = CalcLL1Parser.SumaPContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self.match(CalcLL1Parser.PLUS)
                self.state = 48
                self.term()
                self.state = 49
                self.exprP()
                pass
            elif token in [6]:
                localctx = CalcLL1Parser.RestaPContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.match(CalcLL1Parser.MINUS)
                self.state = 52
                self.term()
                self.state = 53
                self.exprP()
                pass
            elif token in [12, 15]:
                localctx = CalcLL1Parser.ExprPVacioContext(self, localctx)
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unary(self):
            return self.getTypedRuleContext(CalcLL1Parser.UnaryContext,0)


        def termP(self):
            return self.getTypedRuleContext(CalcLL1Parser.TermPContext,0)


        def getRuleIndex(self):
            return CalcLL1Parser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = CalcLL1Parser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_term)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.unary()
            self.state = 59
            self.termP()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermPContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CalcLL1Parser.RULE_termP

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DivPContext(TermPContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalcLL1Parser.TermPContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DIVIDE(self):
            return self.getToken(CalcLL1Parser.DIVIDE, 0)
        def unary(self):
            return self.getTypedRuleContext(CalcLL1Parser.UnaryContext,0)

        def termP(self):
            return self.getTypedRuleContext(CalcLL1Parser.TermPContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDivP" ):
                listener.enterDivP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDivP" ):
                listener.exitDivP(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDivP" ):
                return visitor.visitDivP(self)
            else:
                return visitor.visitChildren(self)


    class MultPContext(TermPContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalcLL1Parser.TermPContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TIMES(self):
            return self.getToken(CalcLL1Parser.TIMES, 0)
        def unary(self):
            return self.getTypedRuleContext(CalcLL1Parser.UnaryContext,0)

        def termP(self):
            return self.getTypedRuleContext(CalcLL1Parser.TermPContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultP" ):
                listener.enterMultP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultP" ):
                listener.exitMultP(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultP" ):
                return visitor.visitMultP(self)
            else:
                return visitor.visitChildren(self)


    class TermPVacioContext(TermPContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalcLL1Parser.TermPContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermPVacio" ):
                listener.enterTermPVacio(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermPVacio" ):
                listener.exitTermPVacio(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTermPVacio" ):
                return visitor.visitTermPVacio(self)
            else:
                return visitor.visitChildren(self)


    class ModPContext(TermPContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalcLL1Parser.TermPContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MOD(self):
            return self.getToken(CalcLL1Parser.MOD, 0)
        def unary(self):
            return self.getTypedRuleContext(CalcLL1Parser.UnaryContext,0)

        def termP(self):
            return self.getTypedRuleContext(CalcLL1Parser.TermPContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModP" ):
                listener.enterModP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModP" ):
                listener.exitModP(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModP" ):
                return visitor.visitModP(self)
            else:
                return visitor.visitChildren(self)



    def termP(self):

        localctx = CalcLL1Parser.TermPContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_termP)
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                localctx = CalcLL1Parser.MultPContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.match(CalcLL1Parser.TIMES)
                self.state = 62
                self.unary()
                self.state = 63
                self.termP()
                pass
            elif token in [8]:
                localctx = CalcLL1Parser.DivPContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.match(CalcLL1Parser.DIVIDE)
                self.state = 66
                self.unary()
                self.state = 67
                self.termP()
                pass
            elif token in [9]:
                localctx = CalcLL1Parser.ModPContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.match(CalcLL1Parser.MOD)
                self.state = 70
                self.unary()
                self.state = 71
                self.termP()
                pass
            elif token in [5, 6, 12, 15]:
                localctx = CalcLL1Parser.TermPVacioContext(self, localctx)
                self.enterOuterAlt(localctx, 4)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CalcLL1Parser.RULE_unary

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class NegacionContext(UnaryContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalcLL1Parser.UnaryContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MINUS(self):
            return self.getToken(CalcLL1Parser.MINUS, 0)
        def factor(self):
            return self.getTypedRuleContext(CalcLL1Parser.FactorContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNegacion" ):
                listener.enterNegacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNegacion" ):
                listener.exitNegacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNegacion" ):
                return visitor.visitNegacion(self)
            else:
                return visitor.visitChildren(self)


    class PasoFactorContext(UnaryContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalcLL1Parser.UnaryContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def factor(self):
            return self.getTypedRuleContext(CalcLL1Parser.FactorContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPasoFactor" ):
                listener.enterPasoFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPasoFactor" ):
                listener.exitPasoFactor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPasoFactor" ):
                return visitor.visitPasoFactor(self)
            else:
                return visitor.visitChildren(self)



    def unary(self):

        localctx = CalcLL1Parser.UnaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_unary)
        try:
            self.state = 79
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                localctx = CalcLL1Parser.NegacionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.match(CalcLL1Parser.MINUS)
                self.state = 77
                self.factor()
                pass
            elif token in [1, 2, 3, 4, 11, 13, 14]:
                localctx = CalcLL1Parser.PasoFactorContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.factor()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CalcLL1Parser.RULE_factor

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FuncAbsContext(FactorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalcLL1Parser.FactorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ABS(self):
            return self.getToken(CalcLL1Parser.ABS, 0)
        def LPAREN(self):
            return self.getToken(CalcLL1Parser.LPAREN, 0)
        def expr(self):
            return self.getTypedRuleContext(CalcLL1Parser.ExprContext,0)

        def RPAREN(self):
            return self.getToken(CalcLL1Parser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncAbs" ):
                listener.enterFuncAbs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncAbs" ):
                listener.exitFuncAbs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncAbs" ):
                return visitor.visitFuncAbs(self)
            else:
                return visitor.visitChildren(self)


    class FuncTanContext(FactorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalcLL1Parser.FactorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TAN(self):
            return self.getToken(CalcLL1Parser.TAN, 0)
        def LPAREN(self):
            return self.getToken(CalcLL1Parser.LPAREN, 0)
        def expr(self):
            return self.getTypedRuleContext(CalcLL1Parser.ExprContext,0)

        def RPAREN(self):
            return self.getToken(CalcLL1Parser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncTan" ):
                listener.enterFuncTan(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncTan" ):
                listener.exitFuncTan(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncTan" ):
                return visitor.visitFuncTan(self)
            else:
                return visitor.visitChildren(self)


    class FuncSinContext(FactorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalcLL1Parser.FactorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SIN(self):
            return self.getToken(CalcLL1Parser.SIN, 0)
        def LPAREN(self):
            return self.getToken(CalcLL1Parser.LPAREN, 0)
        def expr(self):
            return self.getTypedRuleContext(CalcLL1Parser.ExprContext,0)

        def RPAREN(self):
            return self.getToken(CalcLL1Parser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncSin" ):
                listener.enterFuncSin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncSin" ):
                listener.exitFuncSin(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncSin" ):
                return visitor.visitFuncSin(self)
            else:
                return visitor.visitChildren(self)


    class FuncCosContext(FactorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalcLL1Parser.FactorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def COS(self):
            return self.getToken(CalcLL1Parser.COS, 0)
        def LPAREN(self):
            return self.getToken(CalcLL1Parser.LPAREN, 0)
        def expr(self):
            return self.getTypedRuleContext(CalcLL1Parser.ExprContext,0)

        def RPAREN(self):
            return self.getToken(CalcLL1Parser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncCos" ):
                listener.enterFuncCos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncCos" ):
                listener.exitFuncCos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncCos" ):
                return visitor.visitFuncCos(self)
            else:
                return visitor.visitChildren(self)


    class PasoUnarioContext(FactorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalcLL1Parser.FactorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def primary(self):
            return self.getTypedRuleContext(CalcLL1Parser.PrimaryContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPasoUnario" ):
                listener.enterPasoUnario(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPasoUnario" ):
                listener.exitPasoUnario(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPasoUnario" ):
                return visitor.visitPasoUnario(self)
            else:
                return visitor.visitChildren(self)



    def factor(self):
